tests/snapshots/test_runner__tests__compiler__typecheck__enum_qualified_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Food = Nut()
enum Tool = Nut()

let f = \x =>
  let Nut() = x
  2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_qualified_2.kk:5:7
  │
5 │   let Nut() = x
  │       ^^^ Ambiguous Usage
  │
  = Possible references:

      enum_qualified_2::Food::Nut
      enum_qualified_2::Tool::Nut
